src/main/java/com/metsci/sst/parser/SSTParser.java
// Generated from C:\Users\hughes\git\sst\src\main\resources\SST.g4 by ANTLR 4.1
package com.metsci.sst.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SSTParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Quit=1, Read=2, Print=3, New=4, Equals=5, Colon=6, Double=7, Float=8, 
		Bool=9, True=10, False=11, Dollar=12, String=13, LP=14, RP=15, LB=16, 
		RB=17, CopySignal=18, CompareSignals=19, ClearSignal=20, PrintEigenrays=21, 
		PrintGSMEigenrays=22, Identifier=23, Number=24, WhiteSpace=25, MulitlineComment=26, 
		SinglelineComment=27;
	public static final String[] tokenNames = {
		"<INVALID>", "'quit'", "'read'", "'print'", "'new'", "'='", "':'", "'double'", 
		"'float'", "'bool'", "'true'", "'false'", "'$'", "String", "'('", "')'", 
		"'{'", "'}'", "'CopySignal'", "'CompareSignals'", "'ClearSignal'", "'PrintEigenrays'", 
		"'PrintGSMEigenrays'", "Identifier", "Number", "WhiteSpace", "MulitlineComment", 
		"SinglelineComment"
	};
	public static final int
		RULE_sstinput = 0, RULE_statement = 1, RULE_read = 2, RULE_print = 3, 
		RULE_assignmentstatement = 4, RULE_copysignal = 5, RULE_comparesignals = 6, 
		RULE_identifierbrackets = 7, RULE_clearsignal = 8, RULE_printeigenrays = 9, 
		RULE_quit = 10, RULE_assignment = 11, RULE_assignmentvalue = 12, RULE_brackets = 13, 
		RULE_parenthesis = 14, RULE_copysignalvalue = 15;
	public static final String[] ruleNames = {
		"sstinput", "statement", "read", "print", "assignmentstatement", "copysignal", 
		"comparesignals", "identifierbrackets", "clearsignal", "printeigenrays", 
		"quit", "assignment", "assignmentvalue", "brackets", "parenthesis", "copysignalvalue"
	};

	@Override
	public String getGrammarFileName() { return "SST.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SSTParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SstinputContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SstinputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sstinput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterSstinput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitSstinput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitSstinput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SstinputContext sstinput() throws RecognitionException {
		SstinputContext _localctx = new SstinputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sstinput);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(32); statement();
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public QuitContext quit() {
			return getRuleContext(QuitContext.class,0);
		}
		public ComparesignalsContext comparesignals() {
			return getRuleContext(ComparesignalsContext.class,0);
		}
		public AssignmentstatementContext assignmentstatement() {
			return getRuleContext(AssignmentstatementContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public IdentifierbracketsContext identifierbrackets() {
			return getRuleContext(IdentifierbracketsContext.class,0);
		}
		public ClearsignalContext clearsignal() {
			return getRuleContext(ClearsignalContext.class,0);
		}
		public CopysignalContext copysignal() {
			return getRuleContext(CopysignalContext.class,0);
		}
		public PrinteigenraysContext printeigenrays() {
			return getRuleContext(PrinteigenraysContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(38); read();
				}
				break;

			case 2:
				{
				setState(39); print();
				}
				break;

			case 3:
				{
				setState(40); assignmentstatement();
				}
				break;

			case 4:
				{
				setState(41); copysignal();
				}
				break;

			case 5:
				{
				setState(42); comparesignals();
				}
				break;

			case 6:
				{
				setState(43); clearsignal();
				}
				break;

			case 7:
				{
				setState(44); identifierbrackets();
				}
				break;

			case 8:
				{
				setState(45); printeigenrays();
				}
				break;

			case 9:
				{
				setState(46); quit();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(SSTParser.String, 0); }
		public TerminalNode Read() { return getToken(SSTParser.Read, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitRead(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); match(Read);
			setState(50); match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(SSTParser.String, 0); }
		public TerminalNode Identifier() { return getToken(SSTParser.Identifier, 0); }
		public TerminalNode Print() { return getToken(SSTParser.Print, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_print);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52); match(Print);
			setState(53);
			_la = _input.LA(1);
			if ( !(_la==String || _la==Identifier) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentstatementContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignmentstatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentstatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterAssignmentstatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitAssignmentstatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitAssignmentstatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentstatementContext assignmentstatement() throws RecognitionException {
		AssignmentstatementContext _localctx = new AssignmentstatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignmentstatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CopysignalContext extends ParserRuleContext {
		public TerminalNode CopySignal() { return getToken(SSTParser.CopySignal, 0); }
		public CopysignalvalueContext copysignalvalue() {
			return getRuleContext(CopysignalvalueContext.class,0);
		}
		public CopysignalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_copysignal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterCopysignal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitCopysignal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitCopysignal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CopysignalContext copysignal() throws RecognitionException {
		CopysignalContext _localctx = new CopysignalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_copysignal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57); match(CopySignal);
			setState(58); copysignalvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparesignalsContext extends ParserRuleContext {
		public TerminalNode CompareSignals() { return getToken(SSTParser.CompareSignals, 0); }
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public ParenthesisContext parenthesis() {
			return getRuleContext(ParenthesisContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SSTParser.Identifier, 0); }
		public ComparesignalsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparesignals; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterComparesignals(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitComparesignals(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitComparesignals(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparesignalsContext comparesignals() throws RecognitionException {
		ComparesignalsContext _localctx = new ComparesignalsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_comparesignals);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60); match(CompareSignals);
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				{
				setState(61); match(Identifier);
				setState(62); match(Identifier);
				}
				}
				break;

			case 2:
				{
				setState(63); brackets();
				}
				break;

			case 3:
				{
				setState(64); parenthesis();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierbracketsContext extends ParserRuleContext {
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public ParenthesisContext parenthesis() {
			return getRuleContext(ParenthesisContext.class,0);
		}
		public TerminalNode Identifier(int i) {
			return getToken(SSTParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(SSTParser.Identifier); }
		public IdentifierbracketsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierbrackets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterIdentifierbrackets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitIdentifierbrackets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitIdentifierbrackets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierbracketsContext identifierbrackets() throws RecognitionException {
		IdentifierbracketsContext _localctx = new IdentifierbracketsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_identifierbrackets);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(Identifier);
			setState(71);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(68); match(Identifier);
				}
				break;

			case 2:
				{
				setState(69); parenthesis();
				}
				break;

			case 3:
				{
				setState(70); brackets();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClearsignalContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(SSTParser.Identifier, 0); }
		public TerminalNode ClearSignal() { return getToken(SSTParser.ClearSignal, 0); }
		public ClearsignalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clearsignal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterClearsignal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitClearsignal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitClearsignal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClearsignalContext clearsignal() throws RecognitionException {
		ClearsignalContext _localctx = new ClearsignalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_clearsignal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); match(ClearSignal);
			setState(74); match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrinteigenraysContext extends ParserRuleContext {
		public TerminalNode PrintGSMEigenrays() { return getToken(SSTParser.PrintGSMEigenrays, 0); }
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public TerminalNode PrintEigenrays() { return getToken(SSTParser.PrintEigenrays, 0); }
		public PrinteigenraysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printeigenrays; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterPrinteigenrays(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitPrinteigenrays(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitPrinteigenrays(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrinteigenraysContext printeigenrays() throws RecognitionException {
		PrinteigenraysContext _localctx = new PrinteigenraysContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_printeigenrays);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_la = _input.LA(1);
			if ( !(_la==PrintEigenrays || _la==PrintGSMEigenrays) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(78);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(77); brackets();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuitContext extends ParserRuleContext {
		public TerminalNode Quit() { return getToken(SSTParser.Quit, 0); }
		public QuitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterQuit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitQuit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitQuit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuitContext quit() throws RecognitionException {
		QuitContext _localctx = new QuitContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_quit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(Quit);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode New() { return getToken(SSTParser.New, 0); }
		public TerminalNode Identifier() { return getToken(SSTParser.Identifier, 0); }
		public TerminalNode Equals() { return getToken(SSTParser.Equals, 0); }
		public AssignmentvalueContext assignmentvalue() {
			return getRuleContext(AssignmentvalueContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(82); match(New);
				}
				break;
			}
			setState(85); match(Identifier);
			setState(86); match(Equals);
			setState(87); assignmentvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentvalueContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(SSTParser.String, 0); }
		public TerminalNode Double() { return getToken(SSTParser.Double, 0); }
		public TerminalNode False() { return getToken(SSTParser.False, 0); }
		public ParenthesisContext parenthesis() {
			return getRuleContext(ParenthesisContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(SSTParser.Identifier, 0); }
		public TerminalNode True() { return getToken(SSTParser.True, 0); }
		public TerminalNode Colon() { return getToken(SSTParser.Colon, 0); }
		public TerminalNode Bool() { return getToken(SSTParser.Bool, 0); }
		public TerminalNode LB() { return getToken(SSTParser.LB, 0); }
		public BracketsContext brackets() {
			return getRuleContext(BracketsContext.class,0);
		}
		public TerminalNode Float() { return getToken(SSTParser.Float, 0); }
		public TerminalNode RB() { return getToken(SSTParser.RB, 0); }
		public TerminalNode Number() { return getToken(SSTParser.Number, 0); }
		public TerminalNode Dollar() { return getToken(SSTParser.Dollar, 0); }
		public AssignmentvalueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentvalue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterAssignmentvalue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitAssignmentvalue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitAssignmentvalue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentvalueContext assignmentvalue() throws RecognitionException {
		AssignmentvalueContext _localctx = new AssignmentvalueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_assignmentvalue);
		int _la;
		try {
			setState(114);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				_la = _input.LA(1);
				if ( !(_la==String || _la==Identifier) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(90);
					_la = _input.LA(1);
					if ( !(_la==Double || _la==Float) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(91); match(Colon);
					}
					break;
				}
				setState(94); match(Number);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(95); match(Bool);
					setState(96); match(Colon);
					}
					break;
				}
				setState(99);
				_la = _input.LA(1);
				if ( !(_la==True || _la==False) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(104);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(100); match(Identifier);
					setState(102);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(101); match(Colon);
						}
						break;
					}
					}
					break;
				}
				setState(108);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(106); parenthesis();
					}
					break;

				case 2:
					{
					setState(107); brackets();
					}
					break;
				}
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110); match(Dollar);
				setState(111); match(LB);
				setState(112); match(Identifier);
				setState(113); match(RB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketsContext extends ParserRuleContext {
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public TerminalNode LB() { return getToken(SSTParser.LB, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public TerminalNode RB() { return getToken(SSTParser.RB, 0); }
		public BracketsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_brackets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).enterBrackets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SSTListener ) ((SSTListener)listener).exitBrackets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SSTVisitor ) return ((SSTVisitor<? extends T>)visitor).visitBrackets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BracketsContext brackets() throws RecognitionException {
		BracketsContext _localctx = new BracketsContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_brackets);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(LB);
			setState(120);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(117); assignment();
					}
					} 
				}
				setState(122);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			setState(123); match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
